--- a/microblogging/frontend/package.json
+++ b/microblogging/frontend/package.json
@@ -6,11 +6,13 @@
     "build": "vite build",
     "preview": "vite preview --port 5050",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "start": "npx webpack --progress --config webpack.config.js",
+    "start": "npx webpack --watch --progress --config webpack.config.js",
     "tailwind": "npx tailwindcss --config tailwind.config.js --output ../static/css/tailwind.css"
   },
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@headlessui/vue": "^1.5.0",
+    "@heroicons/vue": "^1.0.6",
     "@inertiajs/inertia": "^0.11.0",
     "@inertiajs/inertia-vue3": "^0.6.0",
     "@inertiajs/progress": "^0.2.7",
