--- a/microblogging/frontend/package.json
+++ b/microblogging/frontend/package.json
@@ -17,6 +17,8 @@
     "@inertiajs/inertia-vue3": "^0.6.0",
     "@inertiajs/progress": "^0.2.7",
     "@tailwindcss/forms": "^0.5.0",
+    "@vuelidate/core": "^2.0.0-alpha.35",
+    "@vuelidate/validators": "^2.0.0-alpha.27",
     "autoprefixer": "^10.4.4",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
